Fixed LP530966, profile layout bug.  Derek via Paul.

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1667,7 +1667,7 @@ ul.tagUsersList li {
 	margin-top: 3em;
 }
 .profile_page_body div.wrapper {
-	margin-left: 93px;
+	margin-left: 113px;
 }
 .profile_page_body div p span {
 	display: inline;
